fixed line-clamping on safari

--- a/client/src/Components/MenuItem.jsx/MenuItem.css
+++ b/client/src/Components/MenuItem.jsx/MenuItem.css
@@ -5,54 +5,64 @@
   background: #1c6e8c;
 }
 
-.card .menu-item-image {
+.menu-item-image {
   height: 128px;
   border-radius: 15px;
 }
 
-.card .menu-item-content {
+.menu-item-content {
   padding: 0px 0px 0px 12px;
 }
 
-.card .card-content .menu-item-title {
-  margin: 0px 0px 6px 0px;
+.menu-item-title {
+  display: inline;
 
   font-family: "Roboto", sans-serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 22px;
+  line-height: 21px;
 
   color: #ffffff;
 }
 
-.card .menu-item-description {
-  display: inline-block;
-  max-height: 220px;
-  overflow: hidden;
+.menu-item-description {
+  display: inline;
 
-  display: -webkit-box;
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
-
+  white-space: pre-line;
   font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-weight: normal;
   font-size: 16px;
   line-height: 21px;
 
   color: #c7d6d5;
 }
 
-.card .menu-item-price {
+.menu-item-price {
   position: absolute;
-  bottom: 1px;
+  bottom: 12px;
 
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
-  line-height: 21px;
+  line-height: 16px;
 
   color: #ffffff;
+}
+
+.line-clamp-4 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+
+  color: #c7d6d5;
+}
+
+.menu-item-description::before {
+  content: "\A ";
+}
+
+.inline-spacer {
+  content: " ";
+  line-height: 28px;
 }
